--- a/style.css
+++ b/style.css
@@ -1,3 +1,78 @@
 body{
     font-family: 'Poppins', sans-serif;
+   
+}
+
+nav{
+ display: flex;
+ justify-content: space-between;
+ text-align: center;
+
+}
+
+nav > ul{
+   display: flex;
+   align-items: center;
+   text-align: center;
+   margin-right: 100px;
+}
+
+nav li{
+    list-style: none;
+    margin: 0 35px;
+}
+
+nav a{
+    text-decoration: none;
+    color: #3A3A3A;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+/*nav section end*/
+
+.influence-head{
+    color: #3A3A3A;
+   font-size: 1.5rem;
+   font-weight: 700;
+   margin-left: 120px;
+}
+
+
+.banner{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 80px;
+    padding: 30px;
+}
+
+
+.banner-title{
+color: #3A3A3A;
+font-size: 3.25rem;
+font-weight: 700;
+margin-bottom: 0;
+}
+
+.banner-description{
+    color: #3A3A3A;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.btn-prebook{
+    border: 0;
+    border-radius: 41px;
+    background: #E02C6D;
+    color: #FFF;
+    font-size: 1rem;
+    font-weight: 700;
+    padding: 10px 24px;
+}
+
+.main-camera img{
+    background-image: url("/images/Circle\ design.svg");
+    width: 475px;
+    height: 475px;
 }
